[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "helper"
authors = [{name = "Pierre Mulliez", email = "pierremulliez1@gmail.com"}]
readme = "ReadMe.txt"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires = [
  "pandas",
  "numpy",
  "pytest",
  'openpyxl',
  "datetime"
]
